--- a/package.json
+++ b/package.json
@@ -1,32 +1,49 @@
 {
   "name": "12-world-capstone-game",
-  "private": true,
-  "version": "2.0.0",
+  "private": false,
+  "version": "2.1.0",
+  "description": "Premium cyberpunk World Analyzer modernized with React 19, Vite 6, and Tailwind CSS v4.",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
+  "keywords": [
+    "cyberpunk",
+    "geopolitical",
+    "analyzer",
+    "react",
+    "typescript",
+    "tailwind"
+  ],
+  "author": "Kazi Musharraf",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mk-knight23/12-world-capstone-game.git"
+  },
+  "homepage": "https://mk-knight23.github.io/12-world-capstone-game/",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
-    "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2"
+    "framer-motion": "^12.0.1",
+    "lucide-react": "^0.474.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "vite": "^7.3.1"
-  },
-  "author": "Kazi Musharraf",
-  "license": "MIT"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
+  }
 }
